--- a/NeuroN/app/tasks/todo-page.component.html
+++ b/NeuroN/app/tasks/todo-page.component.html
@@ -1,3 +1,10 @@
-﻿<nn-task-list [(tasks)]="tasks" [pageTitle]="taskListTitle" (editTaskClicked)="onEditTask($event)"></nn-task-list>
-
-<nn-edit-task (taskCreated)="onTaskCreated($event)" [(taskId)]="editedTaskId"></nn-edit-task>
+﻿<div class="row">
+    <div class="col-md-12">
+        <nn-task-list [(tasks)]="tasks" [pageTitle]="taskListTitle" (editTaskClicked)="onEditTask($event)"></nn-task-list>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <nn-edit-task (taskCreated)="onTaskCreated($event)" [(taskId)]="editedTaskId"></nn-edit-task>
+    </div>
+</div>
