--- a/NeuroN/app/shared/menu/menu-item.component.html
+++ b/NeuroN/app/shared/menu/menu-item.component.html
@@ -1,5 +1,5 @@
 <li>
-    <button (click)="menuItemClicked($event)">
+    <a (click)="menuItemClicked()">
         <i class="fa {{icon}} nn-menu-icon"></i>{{label}}
-    </button>
+    </a>
 </li>
