--- a/NeuroN/app/tasks/edit-task.component.html
+++ b/NeuroN/app/tasks/edit-task.component.html
@@ -6,20 +6,22 @@
         <div class="row">
             <div class="col-md-2">Title</div>
             <div class="col-md-4">
-                <input type="text" [(ngModel)]="title" />
+                <input type="text" [(ngModel)]="title"/>
             </div>
         </div>
         <div class="row">
             <div class="col-md-2">Deadline</div>
             <div class="col-md-4">
                 <input type="text" [(ngModel)]="deadline"/>
+                <!--<datepicker [(ngModel)]="deadline"></datepicker>-->
             </div>
         </div>
         <div class="row">
             <div class="col-md-4">
                 <button class="btn btn-primary" (click)="create()" *ngIf="!isInEditMode">Create</button>
-                <button class="btn btn-primary" (click)="saveChanges()" *ngIf="isInEditMode">Save</button>
+                <button class="btn btn-warning" (click)="remove()" *ngIf="isInEditMode">Remove</button>
                 <button class="btn btn-primary" (click)="discardChanges()" *ngIf="isInEditMode">Cancel</button>
+                <button class="btn btn-primary" (click)="saveChanges()" *ngIf="isInEditMode">Save</button>
             </div>
         </div>
     </div>
