--- a/NeuroN/app/tasks/edit-task.component.html
+++ b/NeuroN/app/tasks/edit-task.component.html
@@ -3,25 +3,28 @@
         {{isInEditMode ? 'Edit' : 'Create'}} task
     </div>
     <div class="panel-body">
-        <div class="row">
-            <div class="col-md-2">Title</div>
-            <div class="col-md-4">
-                <input type="text" [(ngModel)]="title"/>
+        <div class="form-horizontal">
+            <div class="form-group">
+                <label for="taskTitle" class="col-sm-2 control-label">Title</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="taskTitle" placeholder="Name your task" [(ngModel)]="title" />
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-2">Deadline</div>
-            <div class="col-md-4">
-                <input type="text" [(ngModel)]="deadline"/>
-                <!--<datepicker [(ngModel)]="deadline"></datepicker>-->
+            <div class="form-group">
+                <label for="taskDeadline" class="col-sm-2 control-label">Deadline</label>
+                <div class="col-sm-10">
+                    <datepicker id="taskDeadline" [(ngModel)]="deadline"></datepicker>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <button class="btn btn-primary" (click)="create()" *ngIf="!isInEditMode">Create</button>
-                <button class="btn btn-warning" (click)="remove()" *ngIf="isInEditMode">Remove</button>
-                <button class="btn btn-primary" (click)="discardChanges()" *ngIf="isInEditMode">Cancel</button>
-                <button class="btn btn-primary" (click)="saveChanges()" *ngIf="isInEditMode">Save</button>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <div class="pull-right">
+                        <button class="btn btn-primary" (click)="createNew()" *ngIf="!isInEditMode">Create</button>
+                        <button class="btn btn-error" (click)="remove()" *ngIf="isInEditMode">Remove</button>
+                        <button class="btn btn-default" (click)="discardChanges()" *ngIf="isInEditMode">Cancel</button>
+                        <button class="btn btn-primary" (click)="saveChanges()" *ngIf="isInEditMode">Save</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
