Added blogging module Fixed todo module Updated to newest angular

--- a/NeuroN/app/app.component.html
+++ b/NeuroN/app/app.component.html
@@ -5,7 +5,7 @@
         </h4>
 
         <nn-menu>
-            <nn-menu-item label="What's new" icon="fa-tachometer" route="Blog" (menuItemSelected)="onRouteSelected($event)"></nn-menu-item>
+            <nn-menu-item label="What's new" icon="fa-tachometer" route="blog" (menuItemSelected)="onRouteSelected($event)"></nn-menu-item>
             <nn-menu-item label="Todo" icon="fa-check" route="tasks" (menuItemSelected)="onRouteSelected($event)"></nn-menu-item>
             <nn-menu-item label="Avatar" icon="fa-user" route="avatar" (menuItemSelected)="onRouteSelected($event)"></nn-menu-item>
         </nn-menu>
