--- a/NeuroN/app/tasks/task-list.component.html
+++ b/NeuroN/app/tasks/task-list.component.html
@@ -3,7 +3,7 @@
         {{pageTitle}}
     </div>
     <div class="panel-body">
-        <div class="row">
+        <!--<div class="row">
             <div class="col-md-2">Filter by:</div>
             <div class="col-md-4">
                 <input type="text" [(ngModel)]="listFilter" />
@@ -13,7 +13,7 @@
             <div class="col-md-6">
                 <h3>Filtered by: {{listFilter}}</h3>
             </div>
-        </div>
+        </div>-->
 
         <div class="table-responsive">
         <table class="table" *ngIf='tasks && tasks.length'>
@@ -44,10 +44,14 @@
                     <a [routerLink]="['TaskDetails', {id: task.id}]">{{task.title}}</a>
                 </td>
                 <td>{{setDate(task.deadline) | date}}</td>
-                <td>{{task.finished}}</td>
+                <td>
+                    <span *ngIf="task.isFinished">
+                        <i class="fa fa-check"></i>
+                    </span>
+                </td>
                 <td>
                     <button class="btn btn-primary" (click)="editTask(task.id)">Edit</button>
-                    <button class="btn btn-primary" (click)="finishTask(task.id)">Finish</button>
+                    <button *ngIf="!task.isFinished" class="btn btn-primary" (click)="finishTask(task.id)">Finish</button>
                 </td>
             </tr>
             </tbody>
