Added avatar table, controller, repository, service and rest of the stuff Code cleanup First version of avatar page is working

--- a/NeuroN/app/avatar/avatar.component.html
+++ b/NeuroN/app/avatar/avatar.component.html
@@ -1,1 +1,13 @@
-﻿<div>AVATAR {{ pageTitle }}</div>
+﻿<div class="row" style="margin-top: 30px;">
+    <div class="col-md-6">
+
+        <div class="panel panel-primary">
+            <div class="panel-heading">{{avatar.name}}</div>
+
+            <div class="panel-body">
+                <h3>XP: {{avatar.xp}}</h3>
+                <h3>Level: {{avatar.level}}</h3>
+            </div>
+        </div>
+    </div>
+</div>
