Notification component, service and model

--- a/NeuroN/app/app.component.html
+++ b/NeuroN/app/app.component.html
@@ -9,6 +9,10 @@
             <nn-menu-item label="Todo" icon="fa-check" route="tasks" (menuItemSelected)="onRouteSelected($event)"></nn-menu-item>
             <nn-menu-item label="Avatar" icon="fa-user" route="avatar" (menuItemSelected)="onRouteSelected($event)"></nn-menu-item>
         </nn-menu>
+
+        <div>
+            <nn-notification></nn-notification>
+        </div>
     </div>
 
     <div class="container-fluid">
