--- a/NeuroN/app/app.component.css
+++ b/NeuroN/app/app.component.css
@@ -6,9 +6,11 @@ div.panel-heading {
    font-size: x-large; 
 }
 
+/*
 #wrapper {
     padding-left: 250px;
 }
+*/
 
 #sidebar-wrapper {
     width: 250px;
