--- a/NeuroN/app/avatar/avatar.component.html
+++ b/NeuroN/app/avatar/avatar.component.html
@@ -1,13 +1,19 @@
-﻿<div class="row" style="margin-top: 30px;">
-    <div class="col-md-6">
+﻿<div class="page">
+    <div class="pageheader">
+        <h2>Avatar</h2>
+    </div>
 
-        <div class="panel panel-primary">
-            <div class="panel-heading">{{avatar.name}}</div>
-
-            <div class="panel-body">
-                <h3>XP: {{avatar.xp}}</h3>
-                <h3>Level: {{avatar.level}}</h3>
-            </div>
+    <div class="row">
+        <div class="col-md-6">
+            <section class="tile">
+                <div class="tile-header dvd dvd-btm">
+                    <h3>{{avatar.name}}</h3>
+                </div>
+                <div class="tile-body">
+                    <h3>XP: {{avatar.xp}}</h3>
+                    <h3>Level: {{avatar.level}}</h3>
+                </div>
+            </section>
         </div>
     </div>
 </div>
