--- a/NeuroN/app/blog/edit-blog-entry/edit-blog-entry.component.html
+++ b/NeuroN/app/blog/edit-blog-entry/edit-blog-entry.component.html
@@ -1,8 +1,8 @@
-﻿<div class="panel panel-primary">
-    <div class="panel-heading">
+﻿<div class="tile">
+    <div class="tile-header dvd dvd-btm">
         {{pageTitle}}
     </div>
-    <div class="panel-body">
+    <div class="tile-body">
         <form (ngSubmit)="submitPost()">
             <div class="form-group">
                 <div class="input-group">
