--- a/NeuroN/app/tasks/edit-task/edit-task.component.html
+++ b/NeuroN/app/tasks/edit-task/edit-task.component.html
@@ -1,8 +1,10 @@
-﻿<div class="panel panel-primary">
-    <div class="panel-heading">
-        {{isInEditMode ? 'Edit' : 'Create'}} task
+﻿<section class="tile">
+    <div class="tile-header dvd dvd-btm">
+        <h1 class="custom-font">
+            {{isInEditMode ? 'Edit' : 'Create'}} task
+        </h1>
     </div>
-    <div class="panel-body">
+    <div class="tile-body">
         <div class="form-horizontal">
             <div class="form-group">
                 <label for="taskTitle" class="col-sm-2 control-label">Title</label>
@@ -28,4 +30,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
