--- a/NeuroN/app/shared/menu/menu.component.html
+++ b/NeuroN/app/shared/menu/menu.component.html
@@ -1,3 +1,5 @@
-<ul class="nn-menu">
-    <ng-content></ng-content>
-</ul>
+<div id="sidebar-wrap">
+    <ul class="nn-menu">
+        <ng-content></ng-content>
+    </ul>
+</div>
