--- a/NeuroN/app/shared/menu/menu.component.html
+++ b/NeuroN/app/shared/menu/menu.component.html
@@ -2,4 +2,10 @@
     <ul class="nn-menu">
         <ng-content></ng-content>
     </ul>
+
+    <hr />
+
+    <div style="padding: 10px">
+        <nn-avatar></nn-avatar>
+    </div>
 </div>
