--- a/NeuroN/app/tasks/todo-page.component.html
+++ b/NeuroN/app/tasks/todo-page.component.html
@@ -12,21 +12,24 @@
                     </h1>
                 </div>
 
+                <div>
+                    <nn-display-options [options]="displayOptions" (optionsChanged)="onOptionsChanged($event)"></nn-display-options>
+                </div>
+
                 <div class="tile-body dvd dvd-btm">
-                    <h3>Overdue</h3>
-                    <nn-task-list [(tasks)]="overdueTasks" (editTaskClicked)="onEditTask($event)"></nn-task-list>
+
+                    <div *ngIf="displayOptions.overdueTasksVisible">
+                        <nn-task-list [title]="'Overdue'" [(tasks)]="overdueTasks" (editTaskClicked)="onEditTask($event)"></nn-task-list>
+                        <hr class="line-full"/>
+                    </div>
+
+                    <nn-task-list [title]="'Today'" [(tasks)]="todayTasks" (editTaskClicked)="onEditTask($event)"></nn-task-list>
                     <hr class="line-full" />
 
-                    <h3>Today</h3>
-                    <nn-task-list [(tasks)]="todayTasks" (editTaskClicked)="onEditTask($event)"></nn-task-list>
+                    <nn-task-list [title]="'Tomorrow'" [(tasks)]="tomorrowTasks" (editTaskClicked)="onEditTask($event)"></nn-task-list>
                     <hr class="line-full" />
 
-                    <h3>Tomorrow</h3>
-                    <nn-task-list [(tasks)]="tomorrowTasks" (editTaskClicked)="onEditTask($event)"></nn-task-list>
-                    <hr class="line-full"/>
-
-                    <h3>Further</h3>
-                    <nn-task-list [(tasks)]="furtherTasks" (editTaskClicked)="onEditTask($event)"></nn-task-list>
+                    <nn-task-list [title]="'Further'" [(tasks)]="furtherTasks" (editTaskClicked)="onEditTask($event)"></nn-task-list>
                     <hr class="line-full" />
                 </div>
             </section>
@@ -36,4 +39,10 @@
             <nn-edit-task [(task)]="editedTask"></nn-edit-task>
         </div>
     </div>
+    
+   <!-- <div class="row">
+        <div class="col-md-6">
+            <nn-avatar></nn-avatar>
+        </div>
+    </div>-->
 </div>
